# wal-g-pruner

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build-and-push.yml  changelog-and-release.yml
walg_pruner/: main.py
