[tool.poetry]
name = "wal-g-pruner"
version = "0.0.1"
description = "A WAL-G backup pruner for Postgres that runs great on Kubernetes and plays nice with Spilo containers"
authors = ["Alec Thomas <112640918+a-thomas-22@users.noreply.github.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
